deploy: 5829ab1f0cfc1a6c76109e4ac055b7d646bb46e4

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -117,7 +117,7 @@
           When you tip someone with <code>/tip @user 0.1 SOL</code>, the transaction goes straight from your wallet to theirs. We don't touch it.
         </p>
         <p>
-          <strong>Flat fee:</strong> 0.07 SOL per transaction (no percentages, no custody risk).
+          <strong>Flat fee:</strong> 0.0007 SOL (~$0.07 USD) per transaction (no percentages, no custody risk).
         </p>
       </section>
 
