--- a/terms.html
+++ b/terms.html
@@ -108,7 +108,7 @@
           TiltCheck uses <strong>non-custodial Solana transactions</strong>. Key facts:
         </p>
         <ul>
-          <li><strong>Flat fee:</strong> 0.07 SOL per transaction (subject to change)</li>
+          <li><strong>Flat fee:</strong> 0.0007 SOL (~$0.07 USD) per transaction (subject to change)</li>
           <li><strong>No refunds:</strong> Blockchain transactions are irreversible</li>
           <li><strong>You control your wallet:</strong> We never hold your crypto</li>
           <li><strong>Network fees:</strong> Solana gas fees are separate and paid by you</li>
