--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
       "@type": "FAQPage",
       "mainEntity": [
         {"@type": "Question","name": "What is TiltCheck?","acceptedAnswer": {"@type": "Answer","text": "TiltCheck is a Discord bot that detects tilt patterns, warns about sketchy casinos, blocks scam links, and sends gentle behavioral nudges."}},
-        {"@type": "Question","name": "Is TiltCheck free?","acceptedAnswer": {"@type": "Answer","text": "Core features (tilt detection, casino warnings, link scanning) are free. Tipping uses a flat 0.07 SOL fee."}},
+        {"@type": "Question","name": "Is TiltCheck free?","acceptedAnswer": {"@type": "Answer","text": "Core features (tilt detection, casino warnings, link scanning) are free. Tipping uses a flat 0.0007 SOL (~$0.07 USD) fee."}},
         {"@type": "Question","name": "How does tilt detection work?","acceptedAnswer": {"@type": "Answer","text": "We analyze message velocity, emotional language, loss-chasing phrases, capitalization spikes and repetition to derive a tilt score (0-100)."}},
         {"@type": "Question","name": "Does TiltCheck store my messages?","acceptedAnswer": {"@type": "Answer","text": "No. We store only metadata (timestamps, counts, calculated scores) – never raw message content."}},
         {"@type": "Question","name": "How are casino trust scores calculated?","acceptedAnswer": {"@type": "Answer","text": "Domain age, community reports, license verification, payment history, and social proof sentiment produce a 0–100 trust score."}},
@@ -57,7 +57,7 @@
           <div class="faq-item">
             <button class="faq-toggle" aria-expanded="false" aria-controls="faq-q2" id="faq-btn-q2">Is TiltCheck free?<span class="indicator" aria-hidden="true">+</span></button>
             <div id="faq-q2" class="faq-panel" role="region" aria-labelledby="faq-btn-q2" hidden>
-              <p>Yes. Core features (tilt detection, casino warnings, link scanning) are free. Tipping uses a flat <strong>0.07 SOL</strong> fee per transaction.</p>
+              <p>Yes. Core features (tilt detection, casino warnings, link scanning) are free. Tipping uses a flat <strong>0.0007 SOL</strong> (~$0.07 USD) fee per transaction.</p>
             </div>
           </div>
           <div class="faq-item">
@@ -191,7 +191,7 @@
 
         <h3>What's the tipping fee?</h3>
         <p>
-          <strong>0.07 SOL</strong> per transaction. No percentages, no hidden fees.
+          <strong>0.0007 SOL</strong> (~$0.07 USD) per transaction. No percentages, no hidden fees.
         </p>
 
         <h3>Can I tip in other cryptocurrencies?</h3>
@@ -322,6 +322,9 @@
         <div>
           <h3>TiltCheck</h3>
           <p>Protecting degens from tilt-induced disaster.</p>
+          <p style="margin-top: var(--space-md); font-size: var(--text-sm);">
+            <a href="/responsible-gambling" style="color: var(--color-warning);">🎰 Responsible Gambling Resources</a>
+          </p>
         </div>
         <div>
           <h4>Product</h4>
@@ -346,10 +349,28 @@
           <ul>
             <li><a href="/privacy">Privacy Policy</a></li>
             <li><a href="/terms">Terms of Service</a></li>
+            <li><a href="/responsible-gambling">Responsible Gambling</a></li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
+        <div class="footer-social" style="display: flex; justify-content: center; gap: 1.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
+          <a href="https://discord.gg/s6NNfPHxMS" target="_blank" rel="noopener" title="TiltCheck Discord" style="color: var(--text-muted);">
+            <svg width="24" height="24" viewBox="0 0 71 55" fill="currentColor"><path d="M60.1 4.9C55.6 2.8 50.7 1.3 45.7.4c-.1 0-.2 0-.2.1-.6 1.1-1.3 2.6-1.8 3.7-5.5-.8-10.9-.8-16.3 0-.5-1.2-1.2-2.6-1.9-3.7 0-.1-.1-.1-.2-.1-5.1.9-9.9 2.4-14.4 4.5 0 0 0 0-.1.1C1.6 18.7-.9 32.1.3 45.4v.2c6.1 4.5 12 7.2 17.8 9 .1 0 .2 0 .2-.1 1.4-1.9 2.6-3.8 3.6-5.9.1-.1 0-.3-.1-.3-1.9-.7-3.8-1.6-5.5-2.6-.1-.1-.1-.3 0-.4.4-.3.7-.6 1.1-.9 0 0 .1-.1.2 0 11.6 5.3 24.2 5.3 35.7 0h.2c.4.3.7.6 1.1.9.1.1.1.3 0 .4-1.8 1-3.6 1.9-5.5 2.6-.1.1-.2.2-.1.3 1 2.1 2.3 4 3.6 5.9.1.1.1.1.2.1 5.8-1.8 11.7-4.5 17.8-9v-.2c1.5-15.3-2.5-28.6-10.5-40.4 0 0 0 0-.1-.1zM23.7 37.3c-3.5 0-6.4-3.2-6.4-7.2s2.8-7.2 6.4-7.2c3.6 0 6.4 3.2 6.4 7.2 0 4-2.9 7.2-6.4 7.2zm23.6 0c-3.5 0-6.4-3.2-6.4-7.2s2.8-7.2 6.4-7.2c3.6 0 6.4 3.2 6.4 7.2 0 4-2.9 7.2-6.4 7.2z"/></svg>
+          </a>
+          <a href="https://x.com/tilt_check" target="_blank" rel="noopener" title="@tilt_check on X" style="color: var(--text-muted);">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+          </a>
+          <a href="https://linkedin.com/in/jmenichole0" target="_blank" rel="noopener" title="LinkedIn" style="color: var(--text-muted);">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+          </a>
+          <a href="https://ko-fi.com/jmenichole0" target="_blank" rel="noopener" title="Support on Ko-fi" style="color: var(--text-muted);">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M23.881 8.948c-.773-4.085-4.859-4.593-4.859-4.593H.723c-.604 0-.679.798-.679.798s-.082 7.324-.022 11.822c.164 2.424 2.586 2.672 2.586 2.672s8.267-.023 11.966-.049c2.438-.426 2.683-2.566 2.658-3.734 4.352.24 7.422-2.831 6.649-6.916zm-11.062 3.511c-1.246 1.453-4.011 3.976-4.011 3.976s-.121.119-.31.023c-.076-.057-.108-.09-.108-.09-.443-.441-3.368-3.049-4.034-3.954-.709-.965-1.041-2.7-.091-3.71.951-1.01 3.005-1.086 4.363.407 0 0 1.565-1.782 3.468-.963 1.904.82 1.832 3.011.723 4.311zm6.173.478c-.928.116-1.682.028-1.682.028V7.284h1.77s1.971.551 1.971 2.638c0 1.913-.985 2.667-2.059 3.015z"/></svg>
+          </a>
+        </div>
+        <p style="margin-bottom: 0.5rem;">
+          <a href="https://github.com/jmenichole/Portfolio" target="_blank" rel="noopener" style="color: var(--color-primary);">made for degens by degens ❤️</a>
+        </p>
         <p>
           Built by <a href="https://github.com/jmenichole" target="_blank" rel="noopener">jmenichole</a> • 
           TiltCheck Ecosystem © 2024–2025 • 
