feat: remove top nav, add floating user button with Discord OAuth
- Remove horizontal top navigation bar entirely (user feedback)
- Add clean floating user action button (top-right corner)
- Implement Discord OAuth via Supabase with session persistence
- Create /extension.html with TiltGuard & gameplay analyzer docs
- Update Vercel config for proper dashboard routing + AI Gateway
- Add user dropdown menu (My Dashboard, Control Center, Extension, Logout)
- Show user avatar + username when logged in
- Footer-based navigation architecture
- 777 tests passing ✅

--- a/frontend/public/trust-explained.html
+++ b/frontend/public/trust-explained.html
@@ -179,6 +179,20 @@
             <li><a href="/">Home</a></li>
             <li><a href="/how-it-works">How It Works</a></li>
             <li><a href="/trust-explained">Trust System</a></li>
+            <li><a href="/casinos">Casino Trust Scores</a></li>
+            <li><a href="/degen-trust">Degen Trust Scores</a></li>
+            <li><a href="/faq">FAQ</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Resources</h4>
+          <ul>
+            <li><a href="/press-kit">Press Kit</a></li>
+            <li><a href="/newsletter">Newsletter</a></li>
+            <li><a href="/docs/">Developer Docs</a></li>
+            <li><a href="/site-map">Site Map</a></li>
+            <li><a href="/search">Search</a></li>
           </ul>
         </div>
         <div>
@@ -186,11 +200,10 @@
           <ul>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="https://github.com/jmenichole/tiltcheck-monorepo">GitHub</a></li>
+            <li><a href="https://github.com/jmenichole/tiltcheck-monorepo" target="_blank" rel="noopener">GitHub</a></li>
+            <li><a href="https://discord.gg/s6NNfPHxMS" target="_blank" rel="noopener">Discord</a></li>
           </ul>
-        </div>
-        <div>
-          <h4>Legal</h4>
+          <h4 style="margin-top: 1.5rem;">Legal</h4>
           <ul>
             <li><a href="/privacy">Privacy Policy</a></li>
             <li><a href="/terms">Terms of Service</a></li>
