--- a/frontend/public/privacy.html
+++ b/frontend/public/privacy.html
@@ -315,6 +315,20 @@
             <li><a href="/">Home</a></li>
             <li><a href="/how-it-works">How It Works</a></li>
             <li><a href="/trust-explained">Trust System</a></li>
+            <li><a href="/casinos">Casino Trust Scores</a></li>
+            <li><a href="/degen-trust">Degen Trust Scores</a></li>
+            <li><a href="/faq">FAQ</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4>Resources</h4>
+          <ul>
+            <li><a href="/press-kit">Press Kit</a></li>
+            <li><a href="/newsletter">Newsletter</a></li>
+            <li><a href="/docs/">Developer Docs</a></li>
+            <li><a href="/site-map">Site Map</a></li>
+            <li><a href="/search">Search</a></li>
           </ul>
         </div>
         <div>
