--- a/apps/web/extension.html
+++ b/apps/web/extension.html
@@ -85,7 +85,7 @@
         <h2>Browser Extension Installation</h2>
         
         <div class="info-box" style="background: var(--card-bg); border-left: 4px solid var(--accent-primary); padding: 1.5rem; margin-bottom: 2rem;">
-          <p><strong>Current Version:</strong> TiltGuard v1.1.0</p>
+          <p><strong>Current Version:</strong> TiltGuard v1.1.0 (Feb 26, 2026)</p>
           <p><strong>Supported Casinos:</strong> Stake.com, Stake.us, Roobet, BC.Game, Duelbits, Rollbit, Shuffle, Gamdom + generic support</p>
         </div>
 
@@ -302,7 +302,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024-2025 TiltCheck Ecosystem. Created by jmenichole.</p>
+        <p>&copy; 2024–2026 TiltCheck Ecosystem. Created by jmenichole.</p>
       </div>
     </div>
   </footer>
