split slash commands and rewire

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -69,23 +69,12 @@
       padding: 6px 10px;
     }
   </style>
+</head>
+<body>
+  <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <!-- Shared Nav Include -->
   <div id="shared-nav"></div>
-  <a href="/tools/freespinscan.html">FreeSpinScan</a>
-  <a href="/tools/tiltcheck-core.html">TiltCheck Core</a>
-  <a href="/tools/daad.html">DA&D</a>
-  <a href="/tools/qualifyfirst.html">QualifyFirst</a>
-  <a href="/tools/poker.html">Poker</a>
-  <a href="/tools/triviadrops.html">TriviaDrops</a>
-  </div>
-  </div>
-
-  <!-- Hamburger Menu Button (mobile) -->
-  <button class="hamburger-btn" aria-label="Open menu" aria-expanded="false" onclick="toggleMobileNav()">
-    <span class="hamburger-icon"></span>
-  </button>
-  </nav>
 
   <!-- Mobile Navigation Overlay -->
   <div class="mobile-nav" id="mobileNav" aria-hidden="true">
@@ -195,13 +184,7 @@
           </svg>
           <h1 class="logo-text">TiltCheck</h1>
         </div>
-        <nav class="header-nav" aria-label="Secondary navigation">
-          <a href="/#tools">Tools</a>
-          <a href="/dashboard">Dashboard</a>
-          <a href="/casinos.html">Casinos</a>
-          <button id="connectWalletBtn" class="btn btn-secondary">Connect Wallet</button>
-          <a href="/dashboard" class="btn btn-primary">Launch App</a>
-        </nav>
+        <a href="/dashboard" class="btn btn-primary">Launch App</a>
       </div>
       <p class="tagline">The Degen Transparency Layer</p>
     </div>
@@ -544,24 +527,107 @@
       </div>
     </section>
 
+    <!-- How It Works Section -->
+    <section class="how-it-works-section" aria-labelledby="how-title">
+      <div class="container">
+        <h2 id="how-title" class="section-title">How It Works</h2>
+        <div class="hiw-steps">
+          <div class="hiw-step">
+            <div class="hiw-step-number">1</div>
+            <h3>Join Discord</h3>
+            <p>Add TiltCheck to your casino community Discord server. Instant setup — no KYC, no accounts.</p>
+            <a href="https://discord.gg/s6NNfPHxMS" class="hiw-link" target="_blank" rel="noopener">Join Free →</a>
+          </div>
+          <div class="hiw-connector" aria-hidden="true"></div>
+          <div class="hiw-step">
+            <div class="hiw-step-number">2</div>
+            <h3>Plug In Your Tools</h3>
+            <p>Enable SusLink for link scanning, CollectClock for bonuses, JustTheTip for tipping — pick what you need.</p>
+            <a href="#tools" class="hiw-link">Explore Tools →</a>
+          </div>
+          <div class="hiw-connector" aria-hidden="true"></div>
+          <div class="hiw-step">
+            <div class="hiw-step-number">3</div>
+            <h3>Get Transparency</h3>
+            <p>Trust scores, scam alerts, bonus nerfs, and cooldown nudges surface automatically — in real time.</p>
+            <a href="/casinos.html" class="hiw-link">See Casino Data →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Trust Engines Section -->
-    <section class="features-section" style="background: var(--bg-secondary);" aria-labelledby="trust-title">
+    <section class="trust-engines-section" aria-labelledby="trust-title">
       <div class="container">
         <h2 id="trust-title" class="section-title">Trust Engines</h2>
-        <div class="features-list">
-          <div class="feature-item">
-            <div>
-              <h3>🏛️ Casino Trust Engine</h3>
-              <p>Tracks fairness, payouts, nerfs, promos, and compliance across the ecosystem so you know who's legit.
-              </p>
+        <p class="section-subtitle-text">Two interlocking trust systems that give communities real signal — not vibes.</p>
+        <div class="trust-engines-grid">
+          <div class="trust-engine-card">
+            <div class="trust-engine-icon">🏛️</div>
+            <h3>Casino Trust Engine</h3>
+            <p>Tracks fairness, payouts, bonus nerfs, promo terms, and compliance across the ecosystem. Every score is explainable and auditable.</p>
+            <ul class="trust-engine-signals">
+              <li><span class="signal-dot signal-green"></span>Fairness deltas &amp; RTP tracking</li>
+              <li><span class="signal-dot signal-green"></span>Payout timeline monitoring</li>
+              <li><span class="signal-dot signal-yellow"></span>Bonus nerf &amp; term change detection</li>
+              <li><span class="signal-dot signal-red"></span>Legal rights alert triggers</li>
+            </ul>
+            <a href="/casinos.html" class="btn btn-secondary" style="margin-top: auto; align-self: flex-start;">View Casino Data →</a>
+          </div>
+          <div class="trust-engine-card">
+            <div class="trust-engine-icon">🧠</div>
+            <h3>Degen Trust Engine</h3>
+            <p>Non-judgmental reputation built on real behavior — generosity, accountability, tilt patterns, scam flags. Recovers automatically. No shame.</p>
+            <ul class="trust-engine-signals">
+              <li><span class="signal-dot signal-green"></span>Tilt indicators (auto-decay)</li>
+              <li><span class="signal-dot signal-green"></span>Accountability tool bonuses</li>
+              <li><span class="signal-dot signal-yellow"></span>Community-weighted reports</li>
+              <li><span class="signal-dot signal-red"></span>Verified scam detection (−15)</li>
+            </ul>
+            <a href="/degen-trust.html" class="btn btn-secondary" style="margin-top: auto; align-self: flex-start;">Learn More →</a>
+          </div>
+        </div>
+
+        <!-- Trust Score Scale -->
+        <div class="trust-scale" role="region" aria-label="Trust score scale">
+          <div class="trust-scale-label">Trust Scale</div>
+          <div class="trust-scale-bar">
+            <div class="trust-scale-segment ts-red" title="High Risk: &lt;40">
+              <span>&lt;40</span><small>High Risk</small>
+            </div>
+            <div class="trust-scale-segment ts-orange" title="Low: 40–59">
+              <span>40–59</span><small>Low</small>
+            </div>
+            <div class="trust-scale-segment ts-yellow" title="Neutral: 60–79">
+              <span>60–79</span><small>Neutral</small>
+            </div>
+            <div class="trust-scale-segment ts-teal" title="High: 80–94">
+              <span>80–94</span><small>High</small>
+            </div>
+            <div class="trust-scale-segment ts-green" title="Very High: 95–100">
+              <span>95+</span><small>Very High</small>
             </div>
           </div>
-          <div class="feature-item">
-            <div>
-              <h3>🧠 Degen Trust Engine</h3>
-              <p>Non-judgmental reputation around behavior, good faith, accountability, and scam detection. Transparency
-                without punishment.</p>
-            </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Discord CTA Banner -->
+    <section class="discord-cta-section" aria-labelledby="discord-cta-title">
+      <div class="container">
+        <div class="discord-cta-inner">
+          <div class="discord-cta-text">
+            <h2 id="discord-cta-title">Built in Discord. For Discord communities.</h2>
+            <p>Every tool lives where degens already are. No new apps. No logins. Just slash commands and instant signal.</p>
+          </div>
+          <div class="discord-cta-actions">
+            <a href="https://discord.gg/s6NNfPHxMS" class="btn btn-discord" target="_blank" rel="noopener noreferrer">
+              <svg width="22" height="22" viewBox="0 0 71 55" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path d="M60.1045 4.8978C55.5792 2.8214 50.7265 1.2916 45.6527 0.41542C45.5603 0.39851 45.468 0.440769 45.4204 0.525289C44.7963 1.6353 44.105 3.0834 43.6209 4.2216C38.1637 3.4046 32.7345 3.4046 27.3892 4.2216C26.905 3.0581 26.1886 1.6353 25.5617 0.525289C25.5141 0.443589 25.4218 0.40133 25.3294 0.41542C20.2584 1.2888 15.4057 2.8186 10.8776 4.8978C10.8384 4.9147 10.8048 4.9429 10.7825 4.9795C1.57795 18.7309 -0.943561 32.1443 0.293408 45.3914C0.299005 45.4562 0.335386 45.5182 0.385761 45.5576C6.45866 50.0174 12.3413 52.7249 18.1147 54.5195C18.2071 54.5477 18.305 54.5139 18.3638 54.4378C19.7295 52.5728 20.9469 50.6063 21.9907 48.5383C22.0523 48.4172 21.9935 48.2735 21.8676 48.2256C19.9366 47.4931 18.0979 46.6 16.3292 45.5858C16.1893 45.5041 16.1781 45.304 16.3068 45.2082C16.679 44.9293 17.0513 44.6391 17.4067 44.3461C17.471 44.2926 17.5606 44.2813 17.6362 44.3151C29.2558 49.6202 41.8354 49.6202 53.3179 44.3151C53.3935 44.2785 53.4831 44.2898 53.5502 44.3433C53.9057 44.6363 54.2779 44.9293 54.6529 45.2082C54.7816 45.304 54.7732 45.5041 54.6333 45.5858C52.8646 46.6197 51.0259 47.4931 49.0921 48.2228C48.9662 48.2707 48.9102 48.4172 48.9718 48.5383C50.038 50.6034 51.2554 52.5699 52.5959 54.435C52.6519 54.5139 52.7526 54.5477 52.845 54.5195C58.6464 52.7249 64.529 50.0174 70.6019 45.5576C70.6551 45.5182 70.6887 45.459 70.6943 45.3942C72.1747 30.0791 68.2147 16.7757 60.1968 4.9823C60.1772 4.9429 60.1437 4.9147 60.1045 4.8978ZM23.7259 37.3253C20.2276 37.3253 17.3451 34.1136 17.3451 30.1693C17.3451 26.225 20.1717 23.0133 23.7259 23.0133C27.308 23.0133 30.1626 26.2532 30.1066 30.1693C30.1066 34.1136 27.28 37.3253 23.7259 37.3253ZM47.3178 37.3253C43.8196 37.3253 40.9371 34.1136 40.9371 30.1693C40.9371 26.225 43.7636 23.0133 47.3178 23.0133C50.9 23.0133 53.7545 26.2532 53.6986 30.1693C53.6986 34.1136 50.9 37.3253 47.3178 37.3253Z" fill="currentColor"/>
+              </svg>
+              Join the Discord
+            </a>
+            <a href="/about.html" class="btn btn-secondary">Read the Mission →</a>
           </div>
         </div>
       </div>
@@ -682,10 +748,11 @@
         fetch('/images-manifest.json').then(r => r.json()).then(manifest => {
           document.querySelectorAll('.tool-card[data-tool] img.tool-icon').forEach(img => {
             const key = img.closest('.tool-card').getAttribute('data-tool');
-            const src = manifest.tools[key];
+            const entry = manifest.tools[key];
+            // entry may be a string (legacy) or an object with an .icon property
+            const src = typeof entry === 'string' ? entry : entry?.icon;
             if (src) {
               img.src = src;
-              // Provide AVIF fallback via picture if needed later; for now simple srcset duplication
               img.srcset = `${src} 1x, ${src} 2x`;
               img.setAttribute('loading', 'lazy');
               img.setAttribute('decoding', 'async');
